# cpp_references

./: README.md
BasicCompilerDefinitions_cpp/: .gitignore  CMakeLists.txt  README.md
BasicCompilerDefinitions_cpp/cmake/: compilerFlags.cmake
BasicCompilerDefinitions_cpp/src/: CMakeLists.txt  main.cpp
LdPreloadBasic_cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp  preload.cpp
ProtobufBasics_cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ProtobufBasics_cpp/proto/: CMakeLists.txt  example.proto
ProtobufBasics_cpp/src/: main.cpp
RingBuffer_cpp/: README.md  RingBuffer.h
StackTraceVSCoreDump_cpp/: README.md
StackTraceVSCoreDump_cpp/CoreDump/: CoreDump.cpp  README.md
StackTraceVSCoreDump_cpp/StackTrace/: README.md  StackTrace.cpp
